#138 Fix missing adjustment of game data through game move events